Added enums and changed ArticleDto

--- a/JEM-id API/appsettings.Development.json
+++ b/JEM-id API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection" : ""
+    "DefaultConnection": "Data Source=LAPTOP-2S21H2FK;Initial Catalog=jemid;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "Logging": {
     "LogLevel": {
